--- a/modeSelect/user/userSelectHtml/1-3chair.html
+++ b/modeSelect/user/userSelectHtml/1-3chair.html
@@ -7,9 +7,10 @@
 </head>
 <link rel="stylesheet" href="preview_cinema.css">
 <body>
-    <a href="./preview_view.html">1.시사회 정보보기</a>
-    <a href="./cinema_view.html">2.영화관 정보보기</a>
-    <a href="./main.html">3.처음으로</a>
+    <div style="text-align: center;">
+    <a href="../userSelectHtml/1-2cinema_view.html"><button>영화관 정보 보기</button></a>
+    <a href="C:\Users\Playdata\Desktop\2jo-html\modeSelect\main.html"><button>모드 선택으로 돌아가기</button></a>
+    </div>
     <h1>좌석 선택</h1>
     <form action="" class="center">
         <table>
