--- a/modeSelect/admin/adminSelectHtml/4reservation_check.html
+++ b/modeSelect/admin/adminSelectHtml/4reservation_check.html
@@ -3,19 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Connect</title>
-    <link rel="stylesheet" href="C:\Users\Playdata\Desktop\2jo-html\1-3.css">
+    <title>Reservation Check</title>
 </head>
 <body>
-    <h1>시사회 정보 선택하기</h1>
+    <div style="text-align: center;">
+        <a href="../adminSelectHtml/1preview.html"><button>시사회 정보 등록하기</button></a>
+        <a href="../adminSelectHtml/2cinema.html"><button>영화관 정보 등록하기</button></a>
+        <a href="../adminSelectHtml/3-1preview_cinema.html"><button>시사회 정보 영화관 정보 연결</button></a>
+        <a href="C:\Users\Playdata\Desktop\2jo-html\modeSelect\main.html"><button>모드 선택으로 돌아가기</button></a>
+        </div>
+    <h1>예약자 명단 확인하기</h1>
     <table  width="500px" height="300px">
+        
         <tr>
-            <td class="etd">No.</td>
             <td class="etd">영화 제목</td>
             <td class="etd">상영 날짜</td>
-              
+            <td class="etd">영화관 이름</td>
+            <td class="etd">지점명</td>
+            <td class="etd">예약자명</td>
+            <td class="etd">핸드폰번호</td>
         </tr>
         <tr>
+            <td></td>
+            <td></td>
+            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -25,21 +36,33 @@
             <td></td>
             <td></td>
             <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
             <td class="radio"><button>선택</button></td>
         </tr>
         <tr>
             <td></td>
             <td></td>
             <td></td>
-            <td class="radio"><button>선택</button></td>   
-        </tr>
-        <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="radio"><button>선택</button></td>   
         </tr>
         <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td class="radio"><button>선택</button></td>   
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -49,9 +72,15 @@
             <td></td>
             <td></td>
             <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
             <td class="radio"><button>선택</button></td>   
         </tr>
         <tr>
+            <td></td>
+            <td></td>
+            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -61,9 +90,15 @@
             <td></td>
             <td></td>
             <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
             <td class="radio"><button>선택</button></td>
         </tr>
         <tr>
+            <td></td>
+            <td></td>
+            <td></td>
             <td></td>
             <td></td>
             <td></td>
