--- a/modeSelect/user/userSelectHtml/1-1preview_view.html
+++ b/modeSelect/user/userSelectHtml/1-1preview_view.html
@@ -7,10 +7,9 @@
 </head>
 <link rel="stylesheet" href="preview_cinema.css">
 <body>
-    <a href="./preview_view.html">1.시사회 정보보기</a>
-    <a href="./cinema_view.html">2.영화관 정보보기</a>
-    <a href="./main.html">3.처음으로</a>
-    <h1>시사회 정보보기</h1>
+    <div style="text-align: center;">
+    <a href="C:\Users\Playdata\Desktop\2jo-html\modeSelect\main.html"><button>모드 선택으로 돌아가기</button></a>
+</div>
     <table>
         <thead>
             <tr class="thead">
@@ -22,17 +21,17 @@
             <tr>
                 <td>영화1</td>
                 <td>2023-01-01</td>
-                <td class="t1"><button><a href="./cinema_view.html">이동</a></button></td>                
+                <td class="t1"><a href="./1-2cinema_view.html"><button>선택</button></a></td>                
             </tr>
             <tr>
                 <td>영화2</td>
                 <td>2023-01-01</td>   
-                <td class="t1"><button><a href="./cinema_view.html">이동</a></button></td>                     
+                <td class="t1"><a href="./1-2cinema_view.html"><button>선택</button></a></td>                    
             </tr>
             <tr>
                 <td>영화3</td>
                 <td>2023-01-01</td>
-                <td class="t1"><button><a href="./cinema_view.html">이동</a></button></td>                  
+                <td class="t1"><a href="./1-2cinema_view.html"><button>선택</button></a></td>               
             </tr>            
         </tbody>
     </table>
