--- a/modeSelect/user/userSelectHtml/1-2cinema_view.html
+++ b/modeSelect/user/userSelectHtml/1-2cinema_view.html
@@ -7,10 +7,11 @@
 </head>
 <link rel="stylesheet" href="preview_cinema.css">
 <body>
-    <a href="./preview_view.html">1.시사회 정보보기</a>
-    <a href="./cinema_view.html">2.영화관 정보보기</a>
-    <a href="./main.html">3.처음으로</a>
-    <h1>영화관 정보보기</h1>
+    <div style="text-align: center;">
+    <a href="../userSelectHtml/1-1preview_view.html"><button>시사회 정보 보기</button></a>
+    <a href="C:\Users\Playdata\Desktop\2jo-html\modeSelect\main.html"><button>모드 선택으로 돌아가기</button></a>
+</div>
+    <h1>영화관 정보 선택</h1>
     <table>
         <thead>
             <tr class="thead">
@@ -24,19 +25,19 @@
                 <td>메가1</td>
                 <td>독산1</td>
                 <td>50</td>
-                <td class="t1"><button><a href="./chair.html">이동</a></button></td>                
+                <td class="t1"><a href="./1-3chair.html"><button>선택</button></a></td>                 
             </tr>
             <tr>
                 <td>메가2</td>
                 <td>독산2</td>
                 <td>50</td>
-                <td class="t1"><button><a href="./chair.html">이동</a></button></td>                
+                <td class="t1"><a href="./1-3chair.html"><button>선택</button></a></td>                     
             </tr>
             <tr>
                 <td>메가3</td>
                 <td>독산3</td>
                 <td>50</td>
-                <td class="t1"><button><a href="./chair.html">이동</a></button></td>                
+                <td class="t1"><a href="./1-3chair.html"><button>선택</button></a></td>                
             </tr>      
         </tbody>
     </table>   
